<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.HomeFragment">
    <data>
        <variable
            name="random_meal_data"
            type="com.sbmshukla.flavorfriend.pojo.Meal" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_home"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/flavorfont"
                        android:text="@string/home_fragment_title"
                        android:textColor="@color/accent"
                        android:textSize="@dimen/_25ssp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_search"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_5sdp"
                        android:contentDescription="@string/search_icon"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_search" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_would_you_like_to_eat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/flavorfont"
                    android:text="@string/what_would_you_like_to_eat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/linear_header"
                    app:layout_constraintTop_toBottomOf="@+id/linear_header" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/random_meal_card"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_would_you_like_to_eat">

                    <ImageView
                        android:id="@+id/random_meal"
                        imageFromUri="@{random_meal_data.strMealThumb}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/accent"
                        android:contentDescription="@string/random_meal_image"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_over_popular_items"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/flavorfont"
                    android:text="@string/over_popular_items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_would_you_like_to_eat"
                    app:layout_constraintTop_toBottomOf="@+id/random_meal_card" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular_meals"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    tools:listitem="@layout/popular_items"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:itemCount="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_over_popular_items" />

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/flavorfont"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/tv_over_popular_items"
                    app:layout_constraintTop_toBottomOf="@+id/rv_popular_meals"
                    app:layout_goneMarginTop="@dimen/_10sdp" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_categories">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_categories"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none" />
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
