<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mealName"
            type="String" />

        <variable
            name="mealThumb"
            type="String" />

        <variable
            name="current_meal"
            type="com.sbmshukla.flavorfriend.pojo.Meal" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.MealFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/g_black"
                app:contentScrim="@color/accent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="@{mealName}">

                <ImageView
                    imageFromUri="@{mealThumb}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/random_meal_image"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/add_to_favorite"
            android:src="@drawable/ic_favorite"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom|end"
            app:tint="@color/white" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/flavorfont"
                        android:text="@{@string/category_title(current_meal.strCategory != null ? current_meal.strCategory : @string/unknown_category)}"
                        android:textColor="@color/g_black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_category"
                        app:drawableTint="@color/g_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/flavorfont"
                        android:text="@{@string/area_title(current_meal.strArea != null ? current_meal.strArea : @string/unknown_area)}"
                        android:textColor="@color/g_black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_location"
                        app:drawableTint="@color/g_black" />

                </LinearLayout>

                <TextView
                    android:id="@+id/instruction_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/flavorfont"
                    android:text="@string/instructions_title"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/_15ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout" />

                <TextView
                    android:id="@+id/tv_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:fontFamily="@font/flavorfont"
                    android:text="@{current_meal.strInstructions}"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/instruction_title"
                    app:layout_constraintTop_toBottomOf="@+id/instruction_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/img_youtube"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_youtube"
            android:visibility="visible"
            android:layout_margin="@dimen/_10sdp"
            android:contentDescription="@string/play_on_youtube" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="bottom"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>